--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_NAME="CK Ecommerce"
 FRONTEND_DOMAIN=https://example.com
 
 # Database Configuration
-DATABASE_URL="postgresql://admin:9oHA2p131RzBkVqMhMh@194.238.31.149:5432/database_cv?schema=public&sslmode=disable"
+DATABASE_URL=
 # Mail confgiuration
 MAIL_HOST=
 MAIL_PORT=2525
