--- a/package.json
+++ b/package.json
@@ -6,18 +6,15 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build user && nest build admin",
     "build:user": "nest build user",
     "build:admin": "nest build admin",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch user && nest start --watch admin",
+    "start:prod": "node dist/apps/$APP_NAME/main.js",
     "start:user": "nest start --watch user",
     "start:admin": "nest start --watch admin",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/user/main && node dist/apps/admin/main",
-    "start:user-prod": "node dist/apps/user/main",
-    "start:admin-prod": "node dist/apps/admin/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
