--- a/package.json
+++ b/package.json
@@ -26,14 +26,9 @@
     "migration:run": "npm run typeorm -- -d ormconfig.ts migration:run",
     "migration:show": "npm run typeorm -- -d ormconfig.ts migration:show",
     "migration:revert": "npm run typeorm -- -d ormconfig.ts migration:revert",
-    "seed": "ts-node -r tsconfig-paths/register common/seeding/$FILE.seed.ts",
-    "seed-role": "ts-node -r tsconfig-paths/register common/seeding/role.seed.ts",
-    "seed-admin": "ts-node -r tsconfig-paths/register common/seeding/admin.seed.ts",
-    "seed-product": "ts-node -r tsconfig-paths/register common/seeding/product.seed.ts",
-    "seed-sample-data": "ts-node -r tsconfig-paths/register common/seeding/sample.seed.ts",
     "create-admin": "ts-node -r tsconfig-paths/register common/seeding/admin.seed.ts",
-    "seed-language-content": "ts-node -r tsconfig-paths/register common/seeding/clear-language.seed.ts && ts-node -r tsconfig-paths/register common/seeding/lang-content.seed.ts",
-    "seed-clear-sample-data": "ts-node -r tsconfig-paths/register common/seeding/clear-sample.seed.ts"
+    "seed-data": "ts-node -r tsconfig-paths/register common/seeding/clear-language.seed.ts && ts-node -r tsconfig-paths/register common/seeding/lang-content.seed.ts",
+    "clear-data": "ts-node -r tsconfig-paths/register common/seeding/clear-sample.seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.554.0",
