--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "migration:show": "npm run typeorm -- -d ormconfig.ts migration:show",
     "migration:revert": "npm run typeorm -- -d ormconfig.ts migration:revert",
     "create-data": "ts-node -r tsconfig-paths/register common/seeding/admin.seed.ts",
-    "clear-data": "ts-node -r tsconfig-paths/register common/seeding/clear-sample.seed.ts"
+    "clear-data": "ts-node -r tsconfig-paths/register common/seeding/clear-sample.seed.ts",
+    "clear-language": "ts-node -r tsconfig-paths/register common/seeding/clear-language.seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.554.0",
