--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "migration:run": "npm run typeorm -- -d ormconfig.ts migration:run",
     "migration:show": "npm run typeorm -- -d ormconfig.ts migration:show",
     "migration:revert": "npm run typeorm -- -d ormconfig.ts migration:revert",
-    "create-data": "ts-node -r tsconfig-paths/register common/seeding/admin.seed.ts",
-    "clear-data": "ts-node -r tsconfig-paths/register common/seeding/clear-sample.seed.ts",
-    "clear-language": "ts-node -r tsconfig-paths/register common/seeding/clear-language.seed.ts"
+    "seed": "ts-node -r tsconfig-paths/register common/seeding/sample.seed.ts",
+    "clear": "ts-node -r tsconfig-paths/register common/seeding/clear-sample.seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.554.0",
