--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
             - "3003:3003"
         env_file:
             - .env
+        healthcheck:
+            test: [ "CMD", "curl", "-f", "http://localhost:3003" ]
+            interval: 10s
+            retries: 5
+
     user:
         build:
             context: .
@@ -19,3 +24,7 @@ services:
             - .env
         ports:
             - "3002:3002"
+        healthcheck:
+            test: [ "CMD", "curl", "-f", "http://localhost:3002" ]
+            interval: 10s
+            retries: 5
