--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:user": "nest build user",
     "build:admin": "nest build admin",
     "build:socket": "nest build socket",
+    "build:batch": "nest build batch",
     "build:vps": "nest build vps",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
@@ -17,6 +18,7 @@
     "start:user": "nest start --watch user",
     "start:admin": "nest start --watch admin",
     "start:socket": "nest start --watch socket",
+    "start:batch": "nest start --watch batch",
     "start:vps": "nest start --watch vps",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -44,6 +46,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/platform-ws": "^10.4.15",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.15",
@@ -69,6 +72,7 @@
     "socket.io-client": "^4.8.1",
     "stripe": "^15.7.0",
     "typeorm": "^0.3.20",
+    "xml2js": "^0.6.2",
     "yaml": "^2.6.1"
   },
   "devDependencies": {
@@ -86,6 +90,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/redis": "2.8.28",
     "@types/supertest": "^6.0.0",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
