--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.2",
-    "googleapis": "^134.0.0",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^146.0.0",
     "install": "^0.13.0",
     "morgan": "^1.10.0",
     "multer-s3": "^3.0.1",
