--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:socket": "nest build socket",
     "build:batch": "nest build batch",
     "build:vps": "nest build vps",
-    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+    "format": "prettier --write \"apps/**/*.ts\" \"common/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch user && nest start --watch admin",
     "start:prod": "node dist/apps/$APP_NAME/main.js",
@@ -38,6 +38,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.554.0",
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bull": "^11.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
@@ -52,6 +53,7 @@
     "@nestjs/websockets": "^10.4.15",
     "@socket.io/redis-adapter": "^8.3.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
@@ -59,6 +61,7 @@
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
     "install": "^0.13.0",
+    "ioredis": "^5.6.1",
     "morgan": "^1.10.0",
     "multer-s3": "^3.0.1",
     "nestjs-paginate": "^8.6.2",
