--- a/package.json
+++ b/package.json
@@ -36,82 +36,82 @@
     "clear": "ts-node -r tsconfig-paths/register common/seeding/clear-sample.seed.ts"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.554.0",
-    "@nestjs-modules/mailer": "^2.0.2",
-    "@nestjs/bull": "^11.0.2",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.4.15",
-    "@nestjs/platform-ws": "^10.4.15",
-    "@nestjs/schedule": "^4.1.2",
-    "@nestjs/swagger": "^7.3.1",
-    "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.4.15",
-    "@socket.io/redis-adapter": "^8.3.0",
-    "bcryptjs": "^2.4.3",
-    "bull": "^4.16.5",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "dotenv": "^16.4.7",
-    "firebase-admin": "^13.0.2",
-    "google-auth-library": "^9.15.1",
-    "googleapis": "^153.0.0",
-    "install": "^0.13.0",
-    "ioredis": "^5.6.1",
-    "morgan": "^1.10.0",
-    "multer-s3": "^3.0.1",
-    "nestjs-paginate": "^8.6.2",
-    "node-ssh": "^13.2.0",
-    "npm": "^10.7.0",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "pg": "^8.11.5",
-    "redis": "^4.7.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "sitemap": "^8.0.0",
-    "slugify": "^1.6.6",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "stripe": "^15.7.0",
-    "typeorm": "^0.3.20",
-    "xml2js": "^0.6.2",
-    "yaml": "^2.6.1"
+    "@aws-sdk/client-s3": "3.554.0",
+    "@nestjs-modules/mailer": "2.0.2",
+    "@nestjs/bull": "11.0.2",
+    "@nestjs/common": "10.0.0",
+    "@nestjs/config": "3.2.1",
+    "@nestjs/core": "10.0.0",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.0.0",
+    "@nestjs/platform-socket.io": "10.4.15",
+    "@nestjs/platform-ws": "10.4.15",
+    "@nestjs/schedule": "4.1.2",
+    "@nestjs/swagger": "7.3.1",
+    "@nestjs/typeorm": "10.0.2",
+    "@nestjs/websockets": "10.4.15",
+    "@socket.io/redis-adapter": "8.3.0",
+    "bcryptjs": "2.4.3",
+    "bull": "4.16.5",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
+    "dotenv": "16.4.7",
+    "firebase-admin": "13.0.2",
+    "google-auth-library": "9.15.1",
+    "googleapis": "153.0.0",
+    "install": "0.13.0",
+    "ioredis": "5.6.1",
+    "morgan": "1.10.0",
+    "multer-s3": "3.0.1",
+    "nestjs-paginate": "8.6.2",
+    "node-ssh": "13.2.0",
+    "npm": "10.7.0",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
+    "pg": "8.11.5",
+    "redis": "4.7.0",
+    "reflect-metadata": "0.2.0",
+    "rxjs": "7.8.1",
+    "sitemap": "8.0.0",
+    "slugify": "1.6.6",
+    "socket.io": "4.8.1",
+    "socket.io-client": "4.8.1",
+    "stripe": "15.7.0",
+    "typeorm": "0.3.20",
+    "xml2js": "0.6.2",
+    "yaml": "2.6.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.11",
-    "@types/multer-s3": "^3.0.3",
-    "@types/node": "^20.3.1",
-    "@types/passport-jwt": "^4.0.1",
+    "@faker-js/faker": "8.4.1",
+    "@nestjs/cli": "10.0.0",
+    "@nestjs/schematics": "10.0.0",
+    "@nestjs/testing": "10.0.0",
+    "@types/bcryptjs": "2.4.6",
+    "@types/express": "4.17.17",
+    "@types/jest": "29.5.2",
+    "@types/morgan": "1.9.9",
+    "@types/multer": "1.4.11",
+    "@types/multer-s3": "3.0.3",
+    "@types/node": "20.3.1",
+    "@types/passport-jwt": "4.0.1",
     "@types/redis": "2.8.28",
-    "@types/supertest": "^6.0.0",
-    "@types/xml2js": "^0.4.14",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "@types/supertest": "6.0.0",
+    "@types/xml2js": "0.4.14",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
+    "eslint": "8.42.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "jest": "29.5.0",
+    "prettier": "3.0.0",
+    "source-map-support": "0.5.21",
+    "supertest": "6.3.3",
+    "ts-jest": "29.1.0",
+    "ts-loader": "9.4.3",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
