--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "build:buddy": "nest build buddy",
     "build:user": "nest build user",
     "build:admin": "nest build admin",
     "build:socket": "nest build socket",
@@ -19,6 +20,7 @@
     "start:admin": "nest start --watch admin",
     "start:socket": "nest start --watch socket",
     "start:batch": "nest start --watch batch",
+    "start:buddy": "nest start --watch buddy",
     "start:vps": "nest start --watch vps",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -49,14 +51,15 @@
     "@nestjs/swagger": "7.3.1",
     "@nestjs/typeorm": "10.0.2",
     "@nestjs/websockets": "10.4.15",
-    "nestjs-paginate": "8.6.2",
     "bcryptjs": "2.4.3",
     "bull": "4.16.5",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.7",
+    "firebase-admin": "^13.5.0",
     "google-auth-library": "9.15.1",
     "morgan": "1.10.0",
+    "nestjs-paginate": "8.6.2",
     "node-ssh": "13.2.0",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
@@ -80,16 +83,16 @@
     "@types/xml2js": "0.4.14",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
+    "depcheck": "^1.4.7",
     "eslint": "8.42.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "jest": "29.5.0",
     "supertest": "6.3.3",
     "ts-jest": "29.1.0",
-    "ts-node": "10.9.1",
     "ts-loader": "^9.5.4",
-    "typescript": "5.1.3",
-    "depcheck": "^1.4.7"
+    "ts-node": "10.9.1",
+    "typescript": "5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
