--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "dotenv": "16.4.7",
     "firebase-admin": "^13.5.0",
     "google-auth-library": "9.15.1",
+    "handlebars": "^4.7.8",
     "morgan": "1.10.0",
     "nestjs-paginate": "8.6.2",
     "node-ssh": "13.2.0",
+    "nodemailer": "^7.0.9",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "pg": "8.11.5",
